--- a/2024/2024-05-05.md
+++ b/2024/2024-05-05.md
@@ -30,7 +30,7 @@ OK, let's get to the step-by-step:
 
 Look, these movies suck mightily, life is short, and barely anything happens that's of importance to the rest of the narrative. Those few parts are more than adequately recapped in the famous [opening text "crawls"](https://www.youtube.com/watch?v=0t2MKB1_z1A) of subsequent Star Wars films. So just save yourself the time.
 
-To be more specific: These movies, released in [1999](https://www.rottentomatoes.com/m/star_wars_episode_i_the_phantom_menace) and [2002](https://www.rottentomatoes.com/m/star_wars_episode_ii_attack_of_the_clones) respectively, begin what's called the Prequel Trilogy. They tell the backstory to the Original Trilogy that was released in the 1970s and 1980s, focusing on the origin of Darth Vader.
+These movies, released in [1999](https://www.rottentomatoes.com/m/star_wars_episode_i_the_phantom_menace) and [2002](https://www.rottentomatoes.com/m/star_wars_episode_ii_attack_of_the_clones) respectively, begin what's called the Prequel Trilogy. Focusing on the origin of Darth Vader, they tell the backstory to the Original Trilogy that was released in the 1970s and 1980s.
 
 As I see it, these movies' core problem is that a single character's origin should really be *contained to a single movie.* Then you should show that character in other adventures, as the Marvel movies and  other franchises have demonstrated since the Prequel Trilogy was released. Heck, even the Star Wars series has done a standalone origin film since.
 
@@ -38,11 +38,13 @@ Thus Episodes I and II can safely be treated as filler.
 
 In their defense, action fans will rightly point out that these two movies contain some of the best choreographed light saber fights in the whole series. If you're curious, you can view these on YouTube [here](https://www.youtube.com/watch?v=qo__6MZIg6U) and [here](https://www.youtube.com/watch?v=wg1ydN42ukY) in under eight minutes.
 
-Even without context, it will be glaringly obvious who the good guys and bad guys are. And if you sat through the full four hours-plus of these movies' runtime, all their gibberish wouldn't add much to your understanding anyway. Trust me.
+Even without context, it will be glaringly obvious who the good guys and bad guys are. And if you were to sit through the full four hours-plus of these movies' runtime, all their gibberish wouldn't add much to your understanding anyway. Trust me.
 
 ### Watch Episode III: Revenge of the Sith -- in Spanish.
 
-This is the movie where Darth Vader finally becomes cinema's most famous respiratory patient, complete with that mean streak we all love to hate. It still suffers from many of the other prequels' flaws, notably dialogue that's somehow both clunkily written and melodramatically delivered. But Vader's final transformation is certainly worth the watch.
+In this movie concluding the Prequel Trilogy, Darth Vader finally becomes cinema's most famous respiratory patient, complete with that mean streak we all love to hate.
+
+Episode III still suffers from many of the other prequels' flaws, notably dialogue that's somehow both clunkily written and melodramatically delivered. But Vader's final transformation is certainly worth the watch.
 
 In a retrospective for the 10-year anniversary of "Sith," Salon's Nico Lang [wrote](https://www.salon.com/2015/12/17/not_all_the_star_wars_prequels_suck_revisiting_revenge_of_the_sith_the_most_tragically_underrated_episode/):
 
@@ -60,7 +62,7 @@ Solo sits squarely in the swashbuckling tradition of the old Flash Gordon serial
 
 ### Watch Andor Season 1.
 
-This gritty 10-episode run is my first pick among the Disney+ shows in the Star Wars universe. It further explores the origins of both the evil Galactic Empire and the Rebellion through the eyes of people on the front lines. There are no space wizards and magic here, just people trying to determine where they fit in and save their own necks. It's awesome.
+This gritty 12-episode run is my first pick among the Disney+ shows in the Star Wars universe. It further explores the origins of both the evil Galactic Empire and the Rebellion through the eyes of people on the front lines. There are no space wizards and magic here, just people trying to determine where they fit in and save their own necks. It's awesome.
 
 ### Watch Rogue One.
 
@@ -74,11 +76,11 @@ Think of this one as the Star Wars universe's version of [The Dirty Dozen](https
 
 At last, we've come to it. These movies, released from 1977 to 1983, are the bedrock of the entire Star Wars franchise. The ones that made it a multibillion-dollar juggernaut at the box office in the first place.
 
-There probably isn't much new I can tell you about these classic installments showing the rebels' fight against galactic tyranny, now led by Vader's son Luke Skywalker.
+There probably isn't much new I can tell you about these classic installments showing the rebels' fight against galactic tyranny, now led by Vader's son Luke Skywalker. Let it suffice that the trilogy builds to climactic battles in Episode VI: Return of the Jedi for both the galactic war in general and the Skywalker family in particular.
 
-Let it suffice that the trilogy builds to climactic battles in Episode VI: Return of the Jedi for both the galactic war in general and the Skywalker family in particular. The execution of this is so solid that everything that follows in the narrative could be considered optional viewing, in my opinion.
+The execution of this is so solid that everything that follows in the narrative could be considered optional viewing, in my opinion.
 
-To parahrase many a Jedi master, I would advise you at this point to search your feelings. If you're satisfied with how Return of the Jedi ends and want to stop there, please do, without guilt.
+To parahrase many a Jedi master, I would advise you at this point in the series to search your feelings. If you're thoroughly satisfied with how Return of the Jedi ends and want to stop there, please do, without guilt.
 
 If you're curious to continue on, that's also OK. My advice on how best to do that follows, with some crucial caveats.
 
@@ -122,7 +124,7 @@ As Luke Skywalker himself warns at one point in VIII: "This isn't going to end h
 
 He was right about that, in a very bad way.
 
-<span>* * * * *</span>
+### Conclusion
 
 Well, that wraps up my admittedly unorthodox Star Wars ordering for now. As Disney is [planning to release](https://variety.com/2023/film/news/kathleen-kennedy-star-wars-celebration-lucasfilm-daisy-ridley-obi-wan-kenobi-season-2-1235577414/) new movies and shows in the franchise for years to come, I may update it later.
 
