--- a/2024/2024-05-05.md
+++ b/2024/2024-05-05.md
@@ -1,136 +1,22 @@
 # The fastest hunk o' junk in the galaxy
-## For May 4th, here's my recommended order for watching live-action Star Wars content.
+## Happy belated Star Wars Day! In honor of Saturday's "holiday," here's my recommended order for watching live-action Star Wars content.
 
 ![Star Wars Lego figures crossing a street Beatles-style.](https://blog.pmckay.com/img/daniel-k-cheung-3840.jpg)
 *Photo by Daniel K Cheung via Unsplash*
 
-**In honor of Star Wars Day this May 4th,** I'd like to weigh in on a long-running debate that confounds newbies to the franchise and destroys friendships among the [Coruscant](https://editorial.rottentomatoes.com/guide/star-wars-movies-in-order/) cognoscenti.
+**If you're subscribed to a tech newsletter like this,** I assume there's a decent chance you're a fan of Star Wars. Some people might be exceptions, of course, but the odds are ever in my favor, to borrow a phrase from a [certain other](https://www.youtube.com/watch?v=_s7qgNMqDJI) sci-fi franchise.
 
-What is the best order in which to watch the Star Wars saga?
+Thus I won't consider it off-topic to call your attention to [my latest Medium post](https://medium.com/p/58cb09646481) in honor of the Saturday's May 4th "holiday" (aka Star Wars Day). It lays out my recommended ordering for watching live-action Star Wars content, including a curation of theatrical movies and streaming content.
 
-Conventionally, there are two schools of thought, centered around the live-action movies in the franchise: Either watch them in order of real-life release starting with 1977's Episode IV: A New Hope, or watch them in order of the fictional narrative, which is a quite radically different experience.
+While writing this one up, it struck me that we've entered something akin to an "open source" era for the Star Wars franchise, almost 40 years into its existence.
 
-Then there is the question of the two standalone live-action films, which don't carry "episode" numbers but are part of the same continuity, plus an ever-increasing body of [canonical](https://starwars.fandom.com/wiki/Timeline_of_canon_media) streaming shows, TV, animation, and other media. If you want to be complete, should you leave this stuff out? On the other hand, if you want to include it, do you start your May 4th watch party in January?
+I don't mean that in terms of permissive licensing of the intellectual property, mind you. Lucasfilm and its parent Disney are still [cranky as ever](https://www.reuters.com/legal/lucasfilm-sues-star-wash-chilean-star-wars-themed-car-wash-2023-12-27/) about that.
 
-My own recommended order, listed below, tries to resolve all this in a reasonable way. It treats the 11 live-action movies, watched in narrative order, as the backbone. However, as a certain space pirate [might say](https://www.youtube.com/watch?v=i1WkXxWoGiI), I've made a lot of special modifications myself to that approach.
+But we have certainly reached a point where a fan can mix and match the existing Star Wars movies and shows in terms of your own consumption, perhaps more than any other sci-fi franchise ever. You can reassemble the myriad parts -- and leave out elements you don't like -- into something that's uniquely useful for you.
 
-Frankly, the Star Wars franchise includes some of the best sci-fi releases ever made and a few that are pure [bantha](https://starwars.fandom.com/wiki/Bantha) fodder. Thus I treat some of the movies as negotiable viewing, at best.  
+In fact, I would say that's the *only* sane way to approach Star Wars at this point, considering the sheer volume of content that's been added over the years. [My Medium post](https://medium.com/p/58cb09646481) attempts to cut through all that interplanetary clutter. Enjoy.
 
-I have also excluded more than 90% of the non-movie content, except for a few highlights that I believe are truly essential.
-
-I'll avoid major spoilers as I go, although a few plot points are unavoidable to mention.
-
-The net effect here may be to shorten your total viewing time, but that's not really my point. This is the ordering that I think truly highlights the best aspects of the Star Wars franchise, will allow newcomers to understand why it's so beloved by existing fans, and at the same time acknowledge the sprawling, uneven nature of the space beast in question.
-
-As a bonus, you may even pick up a second language. 😁
-
-OK, let's get to the step-by-step:
-
-### Skip Episodes I and II entirely.
-
-Look, these movies suck mightily, life is short, and barely anything happens that's of importance to the rest of the narrative. Those few parts are more than adequately recapped in the famous [opening text "crawls"](https://www.youtube.com/watch?v=0t2MKB1_z1A) of subsequent Star Wars films. So just save yourself the time.
-
-These movies, released in [1999](https://www.rottentomatoes.com/m/star_wars_episode_i_the_phantom_menace) and [2002](https://www.rottentomatoes.com/m/star_wars_episode_ii_attack_of_the_clones) respectively, begin what's called the Prequel Trilogy. Focusing on the origin of Darth Vader, they tell the backstory to the Original Trilogy that was released in the 1970s and 1980s.
-
-As I see it, these movies' core problem is that a single character's origin should really be *contained to a single movie.* Then you should show that character in other adventures, as the Marvel movies and  other franchises have demonstrated since the Prequel Trilogy was released. Heck, even the Star Wars series has done a standalone origin film since.
-
-Thus Episodes I and II can safely be treated as filler.
-
-In their defense, action fans will rightly point out that these two movies contain some of the best choreographed light saber fights in the whole series. If you're curious, you can view these on YouTube [here](https://www.youtube.com/watch?v=qo__6MZIg6U) and [here](https://www.youtube.com/watch?v=wg1ydN42ukY) in under eight minutes.
-
-Even without context, it will be glaringly obvious who the good guys and bad guys are. And if you were to sit through the full four hours-plus of these movies' runtime, all their gibberish wouldn't add much to your understanding anyway. Trust me.
-
-### Watch Episode III: Revenge of the Sith -- in Spanish.
-
-In this movie concluding the Prequel Trilogy, Darth Vader finally becomes cinema's most famous respiratory patient, complete with that mean streak we all love to hate.
-
-Episode III still suffers from many of the other prequels' flaws, notably dialogue that's somehow both clunkily written and melodramatically delivered. But Vader's final transformation is certainly worth the watch.
-
-In a retrospective for the 10-year anniversary of "Sith," Salon's Nico Lang [wrote](https://www.salon.com/2015/12/17/not_all_the_star_wars_prequels_suck_revisiting_revenge_of_the_sith_the_most_tragically_underrated_episode/):
-
-*If Roger Ebert compared the original trilogy to a space opera, “Revenge of the Sith” is akin to a delicious space telenovela, and the script makes a lot more sense if you imagine the words being dubbed for the actors as they speak. “Revenge of the Sith” might only be the third- or fourth-best “Star Wars” film (depending on your feelings about ewoks), but it would be the greatest Telemundo show ever made.*
-
-This strikes me as a 100% apt summary of "Sith," to the point that I think we should take Lang's advice to its logical conclusion. Turn on the Spanish audio on whatever home video version of Sith that you're watching, turn on the subtitles in another language if you need them, and get the full space telenovela experience. Why not?
-
-### Watch Solo. Go on. Just do it.
-
-Next up in the narrative chronology is this 2018 origin story of Han Solo, a fan favorite character first played in 1977 by Harrison Ford, in the role that made him a movie star. In the origin film, Alden Ehrenreich plays a younger version of the master smuggler in the making.
-
-Unfortunately, a lot of (ahem) old-school fans couldn't accept the re-casting of Ford and sat out Solo's theatrical release in 2018, making it the [lowest-grossing](https://www.looper.com/1393489/why-solo-flopped-box-office-how-changed-star-wars-forever/) Star Wars movie to date. But if you can approach the movie without such hangups, it really is an entertaining adventure.
-
-Solo sits squarely in the swashbuckling tradition of the old Flash Gordon serials that [inspired](https://www.youtube.com/watch?v=MAGBz1MiEJs&pp=ygUdJ2ZsYXNoIGdvcmRvbicgJ2dlb3JnZSBsdWNhcyc%3D) Star Wars creator George Lucas as a kid. Throw in some more modern flourishes from director Ron Howard, and you have a solid formula for an enjoyable movie.
-
-### Watch Andor Season 1.
-
-This gritty 12-episode run is my first pick among the Disney+ shows in the Star Wars universe. It further explores the origins of both the evil Galactic Empire and the Rebellion through the eyes of people on the front lines. There are no space wizards and magic here, just people trying to determine where they fit in and save their own necks. It's awesome.
-
-### Watch Rogue One.
-
-This standalone film continues very much in the vain of Andor, including an appearance by the title character of the streaming series.
-
-We also meet Jyn Erso, whose father, an engineer, has been conscripted by the Empire to design a planet-destroying battle station called the Death Star. A hastily assembled team of rebels then attempts to steal the plans for the new weapon, in a daring effort to protect the galaxy from it.
-
-Think of this one as the Star Wars universe's version of [The Dirty Dozen](https://www.rottentomatoes.com/m/dirty_dozen), a World War II classic. Its ending also perfectly sets up the next step...
-
-### Watch Episodes IV to VI (aka the Original Trilogy) in order of release.
-
-At last, we've come to it. These movies, released from 1977 to 1983, are the bedrock of the entire Star Wars franchise. The ones that made it a multibillion-dollar juggernaut at the box office in the first place.
-
-There probably isn't much new I can tell you about these classic installments showing the rebels' fight against galactic tyranny, now led by Vader's son Luke Skywalker. Let it suffice that the trilogy builds to climactic battles in Episode VI: Return of the Jedi for both the galactic war in general and the Skywalker family in particular.
-
-The execution of this is so solid that everything that follows in the narrative could be considered optional viewing, in my opinion.
-
-To parahrase many a Jedi master, I would advise you at this point in the series to search your feelings. If you're thoroughly satisfied with how Return of the Jedi ends and want to stop there, please do, without guilt.
-
-If you're curious to continue on, that's also OK. My advice on how best to do that follows, with some crucial caveats.
-
-### If you really, really feel you need an epilogue to the Original Trilogy, and if you don't mind delving into another serial Disney+ series, watch the first two seasons of The Mandalorian.
-
-Essentially a space Western about the chaotic aftermath of the Original Trilogy's events. There is now a New Republic in power, trying to solidify its power across the galaxy. Remnants of the Empire remain as well, now working in the shadows to re-establish their rule. And a bounty hunter who belongs to the warrior Mandalorian tribe gets caught in the middle when he unexpectedly rescues an alien child during the course of a job.
-
-There are a lot of unexpected plot twists and pathos to this one. And if you stop at the end of Season 2, the ties back to the films couldn't be clearer.
-
-There is also a Season 3 available on Disney+, by the way. It's OK overall, but perhaps not as directly relevant to the movies. So I'm not going to call it essential, for our purposes here.
-
-### If you really, really, really feel you need an epilogue to The Mandalorian, or if you want an epilogue to the Original Trilogy but weren't willing to commit to a TV series, watch Episode VII: The Force Awakens.
-
-Here we get back to the theatrical movies -- and into some even heavier caveats.
-
-Disney, which now owns the Star Wars franchise, decided to launch a new trilogy of main "episode" movies in 2015. Ostensibly, these are supposed to build upon the resolution in Episode VI: Return of the Jedi.
-
-As a three-movie arc, known to hardcore fans as the Sequel Trilogy, Episodes VII through IX fail miserably at that goal, in my opinion. But the first installment, Episode VII: The Force Awakens, is easily the best of the bunch. In fact, it's the only one rated "fresh" by both critics and the audience [on Rotten Tomatoes](https://www.rottentomatoes.com/m/star_wars_episode_vii_the_force_awakens), if you follow such things.
-
-The action takes place 30 years after the fall of the Galactic Empire. An evil faction calling itself the New Order is trying to take over, and a new rag-tag Resistance is forming against it. A desert scavenger named Rey gets caught up in the struggle and, along the way, discovers she has a mysterious connection to the universe's karmic energy known as the Force.
-
-You might notice, the story beats here are pretty similar to 1977, to the point that Force Awakens could essentially be considered a remake of that year's Episode IV: A New Hope. If you take Force Awakens in that spirit, and are willing to treat it as a standalone adventure, I think it's a fun watch.
-
-Hardcore fans may protest that the movie ends on a cliffhanger, which I won't spoil here. But I will say, if you're willing to let that cliffhanger sit unresolved for eternity, Force Awakens could serve as a rather poetic end to a person's overall Star Wars-watching experience. Think about it.
-
-Then there's the other option to consider...
-
-### If you are the kind of person who leaves a few tablespoons of milk or orange juice in a gallon container in the refrigerator for your partner to discover later, then watch Episode VIII and, God help you, Episode IX. By all means.
-
-If it's not clear already, I'm really going to recommend against watching these last two installments. For me, they are in a similar category as Episodes I and II -- essentially unwatchable.
-
-That said, because they're at the *end* of the overall Star Wars narrative as it currently stands, not the beginning, some people might find them harder to skip. I mean, if you've gotten this far, why *not* go all the way to the end? It's tempting logic, I know.
-
-My answer: Because major plotlines introduced in Episode VII ultimately lead nowhere. Over the next two movies, one writer or director clearly tries at certain points to undo something they didn't like that another did in the previous movie. And so on.
-
-The further you go with the Sequel Trilogy, the more you realize: It isn't a saga at all; it's just a mishmash.
-
-In that sense, Episode IX is several notches worse than VIII. But really, just save yourself the headache of either of them.
-
-As Luke Skywalker himself warns at one point in VIII: "This isn't going to end how you think."
-
-He was right about that, in a very bad way.
-
-### Conclusion
-
-Well, that wraps up my admittedly unorthodox Star Wars ordering for now. As Disney is [planning to release](https://variety.com/2023/film/news/kathleen-kennedy-star-wars-celebration-lucasfilm-daisy-ridley-obi-wan-kenobi-season-2-1235577414/) new movies and shows in the franchise for years to come, I may update it later.
-
-Honestly, as a Gen Xer who grew up with the Original Trilogy, I never expected to get dozens of hours of new Star Wars content afterward. Like the Force, there's been a dark side to the newer stuff -- chiefly, the feeling that some of it is just being churned out to pad Disney's quarterly earnings.
-
-But there is also light, those moments when Star Wars still surprises us creatively, still fleshes out its far-away worlds and characters in vivid and exciting ways. There is yet hope for it, I think.
+On to some tech news from a galaxy not far, far away at all...
 
 ### Week in Review: April 28 to May 4, 2024
 
