fleshing out news items

--- a/2024/2024-05-05.md
+++ b/2024/2024-05-05.md
@@ -14,23 +14,19 @@ I don't mean that in terms of permissive licensing of the intellectual property,
 
 But we have certainly reached a point where a fan can mix and match the existing Star Wars movies and shows in terms of your own consumption, perhaps more than any other sci-fi franchise ever. You can reassemble the myriad parts -- and leave out elements you don't like -- into something that's uniquely useful for you.
 
-In fact, I would say that's the *only* sane way to approach Star Wars at this point, considering the sheer volume of content that's been added over the years. [My Medium post](https://medium.com/p/58cb09646481) attempts to cut through all that interplanetary clutter. Enjoy.
+In fact, I would say that's the *only* sane way to approach Star Wars at this point, considering the sheer volume of content that's been added to the franchise's canon over the years. [My Medium post](https://medium.com/p/58cb09646481) attempts to cut through all that interplanetary clutter. Enjoy.
 
 On to some tech news from a galaxy not far, far away at all...
 
 ### Week in Review: April 28 to May 4, 2024
 
-- Bitcoin is on track for its worst month since FTX meltdown, according to Bloomberg. <!-- Check month-end tally, links to coverage on Friday. -->
+- **Bitcoin ended April down nearly 16%,** its worst monthly decline [since late 2022](https://www.reuters.com/technology/bitcoin-slides-below-58000-rattled-by-tougher-fed-rate-outlook-2024-05-01/). Waning hopes for a prompt interest-rate cut by the Federal Reserve have hurt BTC and other speculative assets lately, [including U.S. stocks](https://www.spglobal.com/marketintelligence/en/news-insights/latest-news-headlines/s-p-500-falls-4-2-in-april-as-market-momentum-loses-steam-81466397). JPMorgan analysts said individual investors [led April's selling](https://www.coindesk.com/markets/2024/05/02/crypto-market-sell-off-was-driven-by-retail-investors-jpmorgan-says/), but institutions have remained somewhat more bullish on crypto. One example: Jack Dorsey's payments company Block, formerly known as Square, said it will [continue to buy bitcoin](https://www.coindesk.com/business/2024/05/02/jack-dorseys-block-adding-more-bitcoin-to-balance-sheet-presents-road-map-for-others/) to for its corporate balance sheet.
 
-- New crypto ETFs in Hong Kong, Australia. <!-- Find links -->
+- **Crypto ETFs are spreading globally.** New exchange-traded funds for bitcoin and ether began trading [in Hong Kong](https://www.reuters.com/markets/currencies/asias-first-spot-bitcoin-ether-etfs-gain-hong-kong-debut-2024-04-30/). Australian regulators are expected to approve bitcoin ETFs by the end of the year, according to [Bloomberg News](https://www.bloomberg.com/news/articles/2024-04-28/bitcoin-btc-etf-bandwagon-heads-to-australia-after-53-billion-haul-in-us).
 
-- CZ sentencing. <!-- Need update. Find link --> | Roger Ver indictment. <!-- Need link -->
+- **Courtroom updates:** Binance founder Changpeng Zhao was [sentenced to four months](https://www.cnbc.com/2024/04/30/binance-founder-changpeng-zhao-cz-sentenced-to-four-months-in-prison-.html) in prison in the U.S. for violations of anti-money laundering requirements at his crypto exchange. Separately, early bitcoin investor Roger Ver was [arrested in Spain](https://www.theblock.co/post/291772/early-bitcoin-investor-roger-ver-arrested-charged-with-alleged-tax-fraud) and charged with tax violations in the U.S.
 
-- tk
-
-- tk
-
-- tk
+- **Stablecoin issuer Tether** partnered with the research firm Chainalysis to improve monitoring of secondary markets and regulatory compliance. ([CoinDesk](https://www.coindesk.com/policy/2024/05/02/tether-enters-transaction-surveillance-partnership-with-chainalysis-as-regulatory-pressure-mounts/))
 
 ### Odds & Ends
 
