Edits to news summary

--- a/2024/2024-05-05.md
+++ b/2024/2024-05-05.md
@@ -26,6 +26,8 @@ On to some tech news from a galaxy not far, far away at all...
 
 - **Courtroom updates:** Binance founder Changpeng Zhao was [sentenced to four months](https://www.cnbc.com/2024/04/30/binance-founder-changpeng-zhao-cz-sentenced-to-four-months-in-prison-.html) in prison in the U.S. for violations of anti-money laundering requirements at his crypto exchange. Separately, early bitcoin investor Roger Ver was [arrested in Spain](https://www.theblock.co/post/291772/early-bitcoin-investor-roger-ver-arrested-charged-with-alleged-tax-fraud) and charged with tax violations in the U.S.
 
+- **The web3 publishing startup Paragraph** raised $5 million in new venture financing and announced its will acquire Mirror, an Ethereum-based blogging platform. ([The Block](https://www.theblock.co/post/292221/paragraph-raises-5-million-from-usv-and-coinbase-ventures-takes-over-web3-blogging-platform-mirror))
+
 - **Stablecoin issuer Tether** partnered with the research firm Chainalysis to improve monitoring of secondary markets and regulatory compliance. ([CoinDesk](https://www.coindesk.com/policy/2024/05/02/tether-enters-transaction-surveillance-partnership-with-chainalysis-as-regulatory-pressure-mounts/))
 
 ### Odds & Ends
