--- a/2024/2024-05-05.md
+++ b/2024/2024-05-05.md
@@ -14,7 +14,9 @@ I don't mean that in terms of permissive licensing of the intellectual property,
 
 But we have certainly reached a point where a fan can mix and match the existing Star Wars movies and shows in terms of your own consumption, perhaps more than any other sci-fi franchise ever. You can reassemble the myriad parts -- and leave out elements you don't like -- into something that's uniquely useful for you.
 
-In fact, I would say that's the *only* sane way to approach Star Wars at this point, considering the sheer volume of content that's been added to the franchise's canon over the years. [My Medium post](https://medium.com/p/58cb09646481) attempts to cut through all that interplanetary clutter. Enjoy.
+In fact, I would say that's the *only* sane way to approach Star Wars at this point, considering the sheer volume of content that's been added to the franchise's canon over the years.
+
+[My Medium post](https://medium.com/p/58cb09646481) attempts to cut through all that interplanetary clutter. Enjoy.
 
 On to some tech news from a galaxy not far, far away at all...
 
