--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -1,82 +1,33 @@
 # tktktk
 ## tktktk
 
-![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
-*Zane Witherspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
+![]()
+*Photo by TK via TK*
 
-<!--
-
-Lede item. Should run ~450 words. Some possibilities...
-
-Leading candidate right now is a STARWARS riff, for May 4th...
-
-- Skip I and II
-- Watch III in Spanish
-- Solo
-- Rogue One
-- Episodes IV-VI
-- Force Awakens? Maybe.
-- Episode VIII and IX
-
-- PROPERORDER: The Phantom Menace still sucks. A rant. Skip Episodes I and II entirely.
-
-- OPENSOCIAL: Roundup of open standards. Shout out Our biggest fight folks.
-
-     Some relevant links:
-
-     ActivityPub https://en.wikipedia.org/wiki/ActivityPub
-
-     https://uk.finance.yahoo.com/news/billionaire-frank-mccourt-got-divorced-100000144.html
-
-     https://www.aol.com/finance/big-tech-doesnt-billionaire-frank-110418265.html
-
-     https://dsnp.org/
-
-     https://github.com/LibertyDSNP
-
-     https://vimeo.com/showcase/dsnp-public-spec-meeting
-
-     https://nostr.com/
-
-     https://mirror.xyz/about
-
-
-- 4PART: The four-part market and why it matters.
-
-       Some string...
-
-        Is this crypto stuff going to last?
-
-        Short answer: Yes.
-
-        Longer answer: The first three parts mentioned above will certainly last. Bitcoin and Ethereum have reached such a scale that they certainly are going to last. So will stablecoins as a category, although there may be winners and losers along the way. In other words, I can't necessarily tell you that the exact stablecoins that are widely used today will be the same ones in wide use 10 years from now. But there will certainly be *something* along those lines still in use.
-
-        The fourth part -- "everything else" -- contains a mix of stuff that will last and stuff that won't.
-
-        OK. But where do I even start?
-
-        Read up on the first three categories, gain a thorough understanding, and invest where you believe there is the most value. As for the fourth category, you can safely ignore it as a newbie.
-
-- MLBAI: Yes, MLB could provide examples of AI's applications -- and how they might affect other sorts of workplaces. But MLB is also already providing great examples of how data can be abused. Why is OBP down? Why are pitchers' arms falling apart? How do you judge relevance of a particular piece of data to the mission of an organization and the day-to-day execution of it? Riff on WaPo article at https://www.washingtonpost.com/opinions/2024/04/10/op-moneyballai/
-
-- AISIGNIN: One of the most boring aspects of this new technology is really one of the most important.
-
-- HOMEBIAS: Does it exist in tech, as in the stock market?
-
--->
+<!-- Lede item. Flesh out lead news item into a short, short take. -->
 
 ### Week in Review: May 5-11, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+- SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm
 
-- tk
-- tk
-- tk
+- TikTok lawsuit. https://www.msn.com/en-us/news/politics/tiktok-sues-us-government-over-law-that-would-ban-app-alleges-its-obviously-unconstitutional/ar-BB1lYKR0
+
+- https://www.coindesk.com/policy/2024/05/10/us-houses-mchenry-says-bill-on-crypto-market-structure-will-get-floor-vote/
+
+- https://cointelegraph.com/news/from-obscurity-to-prominence-web3-protocol-celebrates-growth-with-dao-powered-event
+
+- Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
+
+
+- **Welcome to New York.** The Big Apple is attracting AI startups in an attempt to become a hub for such technology, [according to the Wall Street Journal](https://www.wsj.com/articles/ai-startups-are-making-their-home-in-new-york-can-they-turn-it-into-an-aipowerhouse-bd5dab78). The city is also set to host an expo for "smart city" tech [next week](https://www.smartcityexpousa.com/).
+
+- Space.com story on "world's pureest silicon." https://www.space.com/purest-silicon-could-lead-to-first-million-qubit-quantum-computing-chips
 
 ### Odds & Ends
 
-- tk
-- tk
+- Quantitative trading pioneer Jim Simons died. https://www.wsj.com/arts-culture/books/jim-simons-a-pioneer-of-quantitative-trading-dies-6621d66e?st=7tefq7np8v3syjk&reflink=desktopwebshare_permalink
+
+- https://www.salon.com/2024/05/07/do-we-need-our-wisdom-teeth-removed-experts-say-this-common-procedure-may-be-unnecessary/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
