Fleshing out 12 May draft

--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -1,33 +1,35 @@
-# tktktk
-## tktktk
+# On Wall Street, some welcome signs for crypto
+## The latest quarterly earnings season underscores the on-chain economy's continuing integration with traditional finance
 
-![]()
-*Photo by TK via TK*
+![Bull statue on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
+*Photo by Fabio Spano via Unsplash*
 
-<!-- Lede item. Flesh out lead news item into a short, short take. -->
+<!--
+
+Lede item. Earnings news on Wall Street...
+
+SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm | Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
+
+
+-->
 
 ### Week in Review: May 5-11, 2024
 
-- SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm
+https://www.coindesk.com/policy/2024/05/10/us-houses-mchenry-says-bill-on-crypto-market-structure-will-get-floor-vote/
 
-- TikTok lawsuit. https://www.msn.com/en-us/news/politics/tiktok-sues-us-government-over-law-that-would-ban-app-alleges-its-obviously-unconstitutional/ar-BB1lYKR0
+https://cointelegraph.com/news/from-obscurity-to-prominence-web3-protocol-celebrates-growth-with-dao-powered-event
 
-- https://www.coindesk.com/policy/2024/05/10/us-houses-mchenry-says-bill-on-crypto-market-structure-will-get-floor-vote/
+https://www.space.com/purest-silicon-could-lead-to-first-million-qubit-quantum-computing-chips
 
-- https://cointelegraph.com/news/from-obscurity-to-prominence-web3-protocol-celebrates-growth-with-dao-powered-event
-
-- Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
-
+- **TikTok sued the U.S. government** over a new law that could result in its app being banned in America. TikTok says the law violates its users' First Amendment rights. ([Variety](https://www.msn.com/en-us/news/politics/tiktok-sues-us-government-over-law-that-would-ban-app-alleges-its-obviously-unconstitutional/ar-BB1lYKR0))
 
 - **Welcome to New York.** The Big Apple is attracting AI startups in an attempt to become a hub for such technology, [according to the Wall Street Journal](https://www.wsj.com/articles/ai-startups-are-making-their-home-in-new-york-can-they-turn-it-into-an-aipowerhouse-bd5dab78). The city is also set to host an expo for "smart city" tech [next week](https://www.smartcityexpousa.com/).
 
-- Space.com story on "world's pureest silicon." https://www.space.com/purest-silicon-could-lead-to-first-million-qubit-quantum-computing-chips
-
 ### Odds & Ends
 
-- Quantitative trading pioneer Jim Simons died. https://www.wsj.com/arts-culture/books/jim-simons-a-pioneer-of-quantitative-trading-dies-6621d66e?st=7tefq7np8v3syjk&reflink=desktopwebshare_permalink
+- **Fewer U.S. schoolchildren ages 8-12 are reading for pleasure.** One possible explanation: This demographic is mostly too young to have smartphones, thus harder for marketers to target. ([Slate](https://slate.com/culture/2024/05/kids-reading-fun-books-decline-by-nine-crisis.html))
 
-- https://www.salon.com/2024/05/07/do-we-need-our-wisdom-teeth-removed-experts-say-this-common-procedure-may-be-unnecessary/
+- **Quantitative trading pioneer Jim Simons died at 86.** The son of a Boston shoe-factory executive, Simons as a child ignored the advice a family physician who said he would never make a living studying mathematics. ([Wall Street Journal](https://www.wsj.com/arts-culture/books/jim-simons-a-pioneer-of-quantitative-trading-dies-6621d66e?st=7tefq7np8v3syjk&reflink=desktopwebshare_permalink))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
