Updating links, lede item copy

--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -4,14 +4,13 @@
 ![Bull statue on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
 *Photo by Fabio Spano via Unsplash*
 
-<!--
-
 Lede item. Earnings news on Wall Street...
 
-SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm | Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
+SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm
 
+Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
 
--->
+https://www.morningstar.com/markets/after-earnings-is-coinbase-stock-buy-sell-or-fairly-valued
 
 ### Week in Review: May 5-11, 2024
 
@@ -23,7 +22,7 @@ https://www.space.com/purest-silicon-could-lead-to-first-million-qubit-quantum-c
 
 - **TikTok sued the U.S. government** over a new law that could result in its app being banned in America. TikTok says the law violates its users' First Amendment rights. ([Variety](https://www.msn.com/en-us/news/politics/tiktok-sues-us-government-over-law-that-would-ban-app-alleges-its-obviously-unconstitutional/ar-BB1lYKR0))
 
-- **Welcome to New York.** The Big Apple is attracting AI startups in an attempt to become a hub for such technology, [according to the Wall Street Journal](https://www.wsj.com/articles/ai-startups-are-making-their-home-in-new-york-can-they-turn-it-into-an-aipowerhouse-bd5dab78). The city is also set to host an expo for "smart city" tech [next week](https://www.smartcityexpousa.com/).
+- **Welcome to New York.** The Big Apple is attracting AI startups in an attempt to become a hub for such technology, [according to the Wall Street Journal](https://www.wsj.com/articles/ai-startups-are-making-their-home-in-new-york-can-they-turn-it-into-an-aipowerhouse-bd5dab78?st=2enxbv0ud8x2c76&reflink=desktopwebshare_permalink). The city is also set to host an expo for "smart city" tech [next week](https://www.smartcityexpousa.com/).
 
 ### Odds & Ends
 
