--- a/2024/2024-05-19.md
+++ b/2024/2024-05-19.md
@@ -65,15 +65,13 @@ Some other possibilities...
 
 <!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
-- SEC warns Robinhood. <!-- Need link -->
-
-- TikTok lawsuit. <!-- Need link -->
+- tk
 
 ### Odds & Ends
 
 - https://www.coindesk.com/consensus-magazine/2024/05/03/the-dollar-won-but-might-the-us-lose-control-of-the-dollar/
 
-- Dorsey is Team Kendrick Lamar. https://decrypt.co/229729/bitcoin-fan-jack-dorsey-kendrick-lamar-drake
+- tktktk
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
