fleshing out news summary

--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -6,21 +6,33 @@
 
 Lede item. Earnings news on Wall Street...
 
+- Robinhood beat: https://www.reuters.com/business/finance/robinhood-swings-profit-year-ago-loss-2024-05-08/ | https://www.theblock.co/post/293343/robinhood-posts-q1-earnings-beat-sees-224-increase-in-crypto-trading-volume | https://www.cnbc.com/video/2024/05/09/robinhood-crypto-transaction-revenue-soars-232percent-crypto-world.html
+
 SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm
 
 Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
 
+Coinbase: https://fortune.com/crypto/2024/05/02/coinbase-q1-earnings-smash-expectations/
+
 https://www.morningstar.com/markets/after-earnings-is-coinbase-stock-buy-sell-or-fairly-valued
+
+Tech companies sitting on mover one-third of all the S&P 500's stock: https://www.investors.com/etfs-and-funds/sectors/sp500-stocks-squat-on-the-sp-500s-cash-pile/
 
 ### Week in Review: May 5-11, 2024
 
-https://www.coindesk.com/policy/2024/05/10/us-houses-mchenry-says-bill-on-crypto-market-structure-will-get-floor-vote/
-
-https://cointelegraph.com/news/from-obscurity-to-prominence-web3-protocol-celebrates-growth-with-dao-powered-event
-
-https://www.space.com/purest-silicon-could-lead-to-first-million-qubit-quantum-computing-chips
+- **A bill to set a comprehensive framework** for U.S. crypto legislation will get a vote before the full House, according to Rep. Patrick McHenry (R-N.C.), chairman of the chamber's Financial Services Committee. But the legislation faces a more uncertain path in the Senate. ([CoinDesk](https://www.coindesk.com/policy/2024/05/10/us-houses-mchenry-says-bill-on-crypto-market-structure-will-get-floor-vote/))
 
 - **TikTok sued the U.S. government** over a new law that could result in its app being banned in America. TikTok says the law violates its users' First Amendment rights. ([Variety](https://www.msn.com/en-us/news/politics/tiktok-sues-us-government-over-law-that-would-ban-app-alleges-its-obviously-unconstitutional/ar-BB1lYKR0))
+
+- **FTX is ready** to repay all non-governmental creditors in full, according to a plan the bankrupt exchange's laywers unveiled Tuesday. A federal bankruptcy judge in Delaware will have to approve the plan for it to move forward. ([CNN](https://www.cnn.com/2024/05/08/business/ftx-bankruptcy-plan-repay-creditors/index.html))
+
+- **Exiled Russian dissident Mark Feygin** is launching an anonymous referendum on the Arbitrum blockchain regarding the legitimacy of Vladimir Putin’s recent re-election. ([CoinDesk](https://www.coindesk.com/policy/2024/05/10/exiled-russian-opposition-leader-launches-blockchain-based-referendum-on-vladimir-putins-election-win/))
+
+- **Erik Voorhees,** a longtime bitcoiner and founder of the exchange ShapeShift, announced a new artificial-intelligence venture. Dubbed Venice AI, it will over a new privacy-focused chatbot. ([Decrypt](https://decrypt.co/230281/venice-ai-shapeshift-founder-erik-voorhees-morpheus-open-source))
+
+- **Dfinity Foundation's Internet Computer Protocol** celebrated the third anniversary of its mainnet launch Friday with a nine-hour [online event](https://www.youtube.com/watch?v=qCDQKwOp938) that included developer talks, project showcases, and more. Congrats!
+
+- **In a new paper, researchers propose** using an enhanced, ultra-pure form of silicon to create powerful chips for use in quantum computers. ([Space.com](https://www.space.com/purest-silicon-could-lead-to-first-million-qubit-quantum-computing-chips))
 
 - **Welcome to New York.** The Big Apple is attracting AI startups in an attempt to become a hub for such technology, [according to the Wall Street Journal](https://www.wsj.com/articles/ai-startups-are-making-their-home-in-new-york-can-they-turn-it-into-an-aipowerhouse-bd5dab78?st=2enxbv0ud8x2c76&reflink=desktopwebshare_permalink). The city is also set to host an expo for "smart city" tech [next week](https://www.smartcityexpousa.com/).
 
