--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -4,19 +4,21 @@
 ![Bull statue on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
 *Photo by Fabio Spano via Unsplash*
 
-Lede item. Earnings news on Wall Street...
+**It's earnings season on Wall Street,** when the largest public companies in the U.S. announce their quarterly results. That includes several whose results were significantly shaped by crypto -- and in some cases offer hints about its outlook.
+
+A few highlights so far:
 
 - Robinhood beat: https://www.reuters.com/business/finance/robinhood-swings-profit-year-ago-loss-2024-05-08/ | https://www.theblock.co/post/293343/robinhood-posts-q1-earnings-beat-sees-224-increase-in-crypto-trading-volume | https://www.cnbc.com/video/2024/05/09/robinhood-crypto-transaction-revenue-soars-232percent-crypto-world.html
 
-SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm
+- SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm
 
-Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
+- Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
 
-Coinbase: https://fortune.com/crypto/2024/05/02/coinbase-q1-earnings-smash-expectations/
+- Coinbase: https://fortune.com/crypto/2024/05/02/coinbase-q1-earnings-smash-expectations/
 
-https://www.morningstar.com/markets/after-earnings-is-coinbase-stock-buy-sell-or-fairly-valued
+- https://www.morningstar.com/markets/after-earnings-is-coinbase-stock-buy-sell-or-fairly-valued
 
-Tech companies sitting on mover one-third of all the S&P 500's stock: https://www.investors.com/etfs-and-funds/sectors/sp500-stocks-squat-on-the-sp-500s-cash-pile/
+- Tech companies sitting on mover one-third of all the S&P 500's stock: https://www.investors.com/etfs-and-funds/sectors/sp500-stocks-squat-on-the-sp-500s-cash-pile/
 
 ### Week in Review: May 5-11, 2024
 
@@ -28,7 +30,7 @@ Tech companies sitting on mover one-third of all the S&P 500's stock: https://ww
 
 - **Exiled Russian dissident Mark Feygin** is launching an anonymous referendum on the Arbitrum blockchain regarding the legitimacy of Vladimir Putin’s recent re-election. ([CoinDesk](https://www.coindesk.com/policy/2024/05/10/exiled-russian-opposition-leader-launches-blockchain-based-referendum-on-vladimir-putins-election-win/))
 
-- **Erik Voorhees,** a longtime bitcoiner and founder of the exchange ShapeShift, announced a new artificial-intelligence venture. Dubbed Venice AI, it will over a new privacy-focused chatbot. ([Decrypt](https://decrypt.co/230281/venice-ai-shapeshift-founder-erik-voorhees-morpheus-open-source))
+- **Erik Voorhees,** a longtime bitcoiner and founder of the exchange ShapeShift, announced a new artificial-intelligence venture. Dubbed Venice AI, it will offer a privacy-focused chatbot. ([Decrypt](https://decrypt.co/230281/venice-ai-shapeshift-founder-erik-voorhees-morpheus-open-source))
 
 - **Dfinity Foundation's Internet Computer Protocol** celebrated the third anniversary of its mainnet launch Friday with a nine-hour [online event](https://www.youtube.com/watch?v=qCDQKwOp938) that included developer talks, project showcases, and more. Congrats!
 
