--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -4,9 +4,9 @@
 ![Bull statue on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
 *Photo by Fabio Spano via Unsplash*
 
-**It's earnings season on Wall Street,** when the largest public companies in the U.S. announce their quarterly results. That includes several whose results were significantly shaped by crypto -- and in some cases offer hints about its outlook.
+**The latest earnings season is winding down on Wall Street,** when the largest public companies in the U.S. announce their quarterly profits. That includes several whose results were significantly shaped by crypto -- and in some cases offer hints about its future.
 
-A few highlights so far:
+A few highlights:
 
 - Robinhood beat: https://www.reuters.com/business/finance/robinhood-swings-profit-year-ago-loss-2024-05-08/ | https://www.theblock.co/post/293343/robinhood-posts-q1-earnings-beat-sees-224-increase-in-crypto-trading-volume | https://www.cnbc.com/video/2024/05/09/robinhood-crypto-transaction-revenue-soars-232percent-crypto-world.html
 
