flesh out lede item

--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -4,21 +4,19 @@
 ![Bull statue on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
 *Photo by Fabio Spano via Unsplash*
 
-**The latest earnings season is winding down on Wall Street,** when the largest public companies in the U.S. announce their quarterly profits. That includes several whose results were significantly shaped by crypto -- and in some cases offer hints about its future.
+**Earnings season** is [winding down](https://www.wsj.com/finance/stocks/wall-street-turns-up-the-heat-on-companies-to-perform-12010d2b?st=n7xqb1ajqubi7q0&reflink=desktopwebshare_permalink) on Wall Street, when the largest public companies in the U.S. announce their profits. That includes several whose results for the first quarter were significantly shaped by crypto -- and in some cases offer hints about its future.
 
 A few highlights:
 
-- Robinhood beat: https://www.reuters.com/business/finance/robinhood-swings-profit-year-ago-loss-2024-05-08/ | https://www.theblock.co/post/293343/robinhood-posts-q1-earnings-beat-sees-224-increase-in-crypto-trading-volume | https://www.cnbc.com/video/2024/05/09/robinhood-crypto-transaction-revenue-soars-232percent-crypto-world.html
+- **Robinhood** handily beat analysts' expectations thanks to its crypto trading revenue, which more than tripled in the first quarter compared to a year ago. However, the firm also disclosed that its crypto unit is under investigation by the Securities and Exchange Commission, which may announce an enforcement action soon. ([The Block](https://www.theblock.co/post/293343/robinhood-posts-q1-earnings-beat-sees-224-increase-in-crypto-trading-volume))
 
-- SEC warns Robinhood. https://www.msn.com/en-us/money/markets/robinhood-s-crypto-arm-receives-sec-warning-over-alleged-securities-violations/ar-BB1lUktm
+- **Block,** maker of the payment apps Cash and Square, also [beat analysts' expectations](https://finance.yahoo.com/news/block-stock-soars-q1-earnings-223531876.html). The company was bolstered in part by a program to steadily buy bitcoin for its corporate treasury -- a practice it will continue through 2024. Block's strong earnings the last two quarters have propeled the company's market valuation high enough that it may [enter the S&P 500](https://coingape.com/news/stocks/jack-dorseys-block-inc-to-enter-sp-500-barclays/) soon.
 
-- Block shareholder letter. https://twitter.com/jack/status/1788948302102147559
+- **Earlier this month,** Coinbase announced its quarterly revenue hit $1.64 billion, well ahead of Wall Street's expectation of $1.34 billion. The trading platform has recently seen a big increase in consumer transactions, as well as an increasing role as a custodian of bitcoin for institutions offering exchange-traded funds pegged to that token. ([CNBC](https://www.cnbc.com/2024/05/02/coinbase-coin-earnings-q1-2024.html))
 
-- Coinbase: https://fortune.com/crypto/2024/05/02/coinbase-q1-earnings-smash-expectations/
+- **Big Tech's economic dominance** has also shined through loud and clear in this season's earnings reports. Just 10 companies, most of them tech giants like Apple, Alphabet, and Microsoft, now hold 34% of the cash on S&P 500 companies' balance sheets. ([Investor's Business Daily](https://www.investors.com/etfs-and-funds/sectors/sp500-stocks-squat-on-the-sp-500s-cash-pile/))
 
-- https://www.morningstar.com/markets/after-earnings-is-coinbase-stock-buy-sell-or-fairly-valued
-
-- Tech companies sitting on mover one-third of all the S&P 500's stock: https://www.investors.com/etfs-and-funds/sectors/sp500-stocks-squat-on-the-sp-500s-cash-pile/
+Of course, the week also saw some notable tech headlines beyond Wall Street. Let's get to those as well...
 
 ### Week in Review: May 5-11, 2024
 
