--- a/2024/2024-05-12.md
+++ b/2024/2024-05-12.md
@@ -1,4 +1,4 @@
-# On Wall Street, some welcome signs for crypto
+# On Wall Street, mostly welcome signs for crypto
 ## The latest quarterly earnings season underscores the on-chain economy's continuing integration with traditional finance
 
 ![Bull statue on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
