--- a/2024/2024-05-19.md
+++ b/2024/2024-05-19.md
@@ -1,77 +1,34 @@
 # tktktk
 ## tktktk
 
-![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
-*Zane Witherspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
+![A blank billboard]()
+*Photo by Kate Trysh via Unsplash*
 
 <!--
 
-Lede item. Should run ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in.
-
-Some other possibilities...
-
-- SPONSORCTA: Brief call to action that I'm looking for sponsors. Exclusive. Has to be vetted by me.
-
-- SECBTC: Inadvertently, the SEC has empowered bitcoin over altcoins mightily.
-
-- ALTSEASON: No, it's not coming.
-
-- OPENSOCIAL: Roundup of open standards. Shout out Our biggest fight folks.
-
-     Some relevant links:
-
-     ActivityPub https://en.wikipedia.org/wiki/ActivityPub
-
-     https://uk.finance.yahoo.com/news/billionaire-frank-mccourt-got-divorced-100000144.html
-
-     https://www.aol.com/finance/big-tech-doesnt-billionaire-frank-110418265.html
-
-     https://dsnp.org/
-
-     https://github.com/LibertyDSNP
-
-     https://vimeo.com/showcase/dsnp-public-spec-meeting
-
-     https://nostr.com/
-
-     https://mirror.xyz/about
-
-
-- 4PART: The four-part market and why it matters.
-
-       Some string...
-
-        Is this crypto stuff going to last?
-
-        Short answer: Yes.
-
-        Longer answer: The first three parts mentioned above will certainly last. Bitcoin and Ethereum have reached such a scale that they certainly are going to last. So will stablecoins as a category, although there may be winners and losers along the way. In other words, I can't necessarily tell you that the exact stablecoins that are widely used today will be the same ones in wide use 10 years from now. But there will certainly be *something* along those lines still in use.
-
-        The fourth part -- "everything else" -- contains a mix of stuff that will last and stuff that won't.
-
-        OK. But where do I even start?
-
-        Read up on the first three categories, gain a thorough understanding, and invest where you believe there is the most value. As for the fourth category, you can safely ignore it as a newbie.
-
-- MLBAI: Yes, MLB could provide examples of AI's applications -- and how they might affect other sorts of workplaces. But MLB is also already providing great examples of how data can be abused. Why is OBP down? Why are pitchers' arms falling apart? How do you judge relevance of a particular piece of data to the mission of an organization and the day-to-day execution of it? Riff on WaPo article at https://www.washingtonpost.com/opinions/2024/04/10/op-moneyballai/
-
-- AISIGNIN: One of the most boring aspects of this new technology is really one of the most important.
-
-- HOMEBIAS: Does it exist in tech, as in the stock market?
+Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in.
 
 -->
 
 ### Week in Review: May 12-18, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+- McCourt bid to buy TikTok: https://www.nytimes.com/2024/05/15/business/frank-mccourt-tiktok-bid.html
 
-- tk
+- Tornado Cash founder convicted of money laundering in the netherlands
+
+- Vitalik proposes new gas structure. https://www.theblock.co/post/294274/vitalik-buterin-eip7706-ethereum-calldata-gas
+
+- new Comcast streaming bundle
+
+- meme stock rally https://www.coindesk.com/markets/2024/05/13/crypto-howls-as-circuit-breakers-restrain-red-hot-gamestop-rally/ | New Nasdaq record.
 
 ### Odds & Ends
 
-- https://www.coindesk.com/consensus-magazine/2024/05/03/the-dollar-won-but-might-the-us-lose-control-of-the-dollar/
+- https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
 
-- tktktk
+- https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
+
+- https://decrypt.co/231125/sarcasm-detector-ai-trained-on-tv-research-paper
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
