--- a/2024/2024-05-19.md
+++ b/2024/2024-05-19.md
@@ -1,16 +1,16 @@
 # tktktk
 ## tktktk
 
-![A blank billboard]()
-*Photo by Kate Trysh via Unsplash*
+![]()
+*Photo by tk via tk*
 
-<!--
-
-Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in.
-
--->
+<!-- Lede item tk. ~450 words. -->
 
 ### Week in Review: May 12-18, 2024
+
+- Bit crypto rally.
+
+- GameStop retreat.
 
 - McCourt bid to buy TikTok: https://www.nytimes.com/2024/05/15/business/frank-mccourt-tiktok-bid.html
 
