--- a/2024/2024-06-02.md
+++ b/2024/2024-06-02.md
@@ -6,11 +6,7 @@
 
 <!--
 
-Lede item. Should run ~450 words...
-
-Some possibilities...
-
-- SPONSORCTA: Brief call to action that I'm looking for sponsors. Exclusive. Has to be vetted by me.
+Lede item. Should run ~450 words. Some possibilities...
 
 - SECBTC: Inadvertently, the SEC has empowered bitcoin over altcoins mightily.
 
@@ -61,7 +57,7 @@ Some possibilities...
 
 -->
 
-### Week in Review: May 12-18, 2024
+### Week in Review: May 26 to June 1, 2024
 
 <!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
